# bp-graph-parser

./: Cargo.toml  README.md  name_comma_function.txt
k2node_codes/: awesome_function.bp  call_function.bp  camera.bp  comment.bp  custom_event.bp  empty.bp  input_axis_event.bp  name_comma_function.bp  test1.bp  test2.bp  test3.txt  two_nodes.bp  variable_get_float.bp  variable_get_object.bp
src/: common.rs  lib.rs  node.rs  parser.rs  pin.rs
src/parser/: ast.rs  literal.rs  object.rs  prop.rs
