[package]
name = "ue-object-reader"
version = "0.1.1"
edition = "2018"
author = ["Riku Ishikawa <strv@strv.dev>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/strvert/ue-serialized-text-parser"

[dependencies]
clap = "2.34.0"
anyhow = "1.0.51"
uuid = { version = "0.8", features = ["v4", "serde"] }
strum = { version = "0.23.0", features = ["derive"] }
strum_macros = "0.23.0"
csv = "1.1"
nom = { version = "7.1.0", features = ["alloc"] }
thiserror = "1.0.30"
assert_approx_eq = "1.1.0"
serde_json = "1.0.72"
serde = { version = "1.0.131", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
